fix spacing

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -80,9 +80,9 @@ h1 {
   font-weight: normal;
   font-size: 5rem;
   line-height: #{($grid * 3)};
-  margin-top: #{($grid * 5)};
-  padding-top: 22px; 
-  margin-bottom: -22px;
+  margin-top: #{($grid * 6)};
+  padding-top: 7px; 
+  margin-bottom: -7px;
 }
 
 h2, h3 {
